--- a/genindex.html
+++ b/genindex.html
@@ -227,7 +227,7 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
       
-  <dt><a href="reference/soap.html#module-usgs">usgs (module)</a>, <a href="reference/api.html#module-usgs">[1]</a>
+  <dt><a href="reference/api.html#module-usgs">usgs (module)</a>, <a href="reference/soap.html#module-usgs">[1]</a>
   </dt>
 
       
